// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tablink renders 1`] = `
<a
  className="sc-knTjpY ecxyEj"
/>
`;

exports[`Tablink renders Href 1`] = `
<a
  className="sc-knTjpY ecxyEj"
  href="www.google.com"
/>
`;

exports[`Tablink renders count 1`] = `
<a
  className="sc-knTjpY ecxyEj"
>
  <span
    className="sc-gRFyCy eDsNaV"
  >
    2
  </span>
</a>
`;

exports[`Tablink renders element left 1`] = `
<a
  className="sc-knTjpY ecxyEj"
>
  <div
    className="sc-jLOYlT XptmO"
  >
    <span>
      Element
    </span>
  </div>
</a>
`;

exports[`Tablink renders isTop 1`] = `
<a
  className="sc-knTjpY kYxkHm"
/>
`;

exports[`Tablink renders size 1`] = `
<a
  className="sc-knTjpY cbiJza"
  size="small"
/>
`;
